Adição de nobo botão

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Meu Sistema</h1>
     <br>
     <button id="btnAdicionar" type="button" class="btn btn-primary">Adicionar</button>
-
+    <button if="btnNovoBotao" type="button" class="btn btn-secondary">Novo Botão</button>
 
     <br />
     <br />
