Adição de mais um botão

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Meu Sistema</h1>
     <br>
     <button id="btnAdicionar" type="button" class="btn btn-primary">Adicionar</button>
+    <button id="btnMaisUmBotao" type="button" class="btn btn-warning">Mais um botão</button>
 
 
     <br />
